# crnn-pytorch

./: pyproject.toml
data/: vocab.json
src/: ctc_decoder.py  language_model.py  predict.py
