[tool.poetry]
name = "crnn-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "4.4.0.42"
tqdm = "4.49.0"
docopt = "0.6.2"
pytorch-lightning = "1.5.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
